traefik/traefik-ing1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: im-test
spec:
  rules:
  - host: im-cs-test
   # http:
   #   paths:
   #   - path: /
        backend:
          url = "ws://im-cs-test"
          #servicePort: 4999
